--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -18,3 +18,6 @@ categories:
   - title: '🔧 Maintenance'
     label: 'chore'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+version-resolver:
+  major: minor
+  minor: patch
