Update release-drafter.yml for correct version-resolver setup

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -19,5 +19,13 @@ categories:
     label: 'chore'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 version-resolver:
-  major: minor
-  minor: patch
+  major:
+    labels:
+      - 'major'
+  minor:
+    labels:
+      - 'minor'
+  patch:
+    labels:
+      - 'patch'
+  default: patch
