Update release-drafter.yml for version resolver setup

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,8 +3,8 @@ template: |
 
   $CHANGES
 
-name-template: 'v$RESOLVED_VERSION'
-tag-template: 'v$RESOLVED_VERSION'
+name-template: 'v$NEXT_MAJOR.$NEXT_MINOR.$NEXT_PATCH'
+tag-template: 'v$NEXT_MAJOR.$NEXT_MINOR.$NEXT_PATCH'
 categories:
   - title: '🚀 Features'
     labels:
